--- a/guest（new）/src/components/Page/chat.less
+++ b/guest（new）/src/components/Page/chat.less
@@ -1,11 +1,11 @@
 
 #chat-contain{
-  position:absolute;
-  height: 100%;
-  width: 640px;
+  display:flex;
+  flex-direction:column;
+  height:100vh;
   .head-content{
-    position: fixed;
-    width: 640px;
+    // position: fixed;
+    // width: 640px;
     height: 1rem;
     z-index: 100;
     background: #fff;
@@ -39,7 +39,8 @@
     overflow: auto;
     background: #fff;
     //margin-bottom: 1rem;
-    margin-top: 0rem;
+    // margin-top: 0rem;
+    flex-grow: 1;
     .slogon{
       width: 100%;
       height: 30%;
@@ -169,6 +170,35 @@
                 padding-right: .1rem;
               }
             }
+          }
+        }
+        .table{
+          max-width: 10rem!important;
+          min-width: .1rem;
+          height: auto;
+          position: relative;
+          left: 1.2rem;
+          top: -1rem;
+          font-size: 22px;
+          background-color: #ececec;
+          font-family: 微软雅黑;
+          line-height: 32px;
+          padding: .25rem;
+          border-radius: .4rem .4rem .4rem 0rem;
+          tr th{
+            border:1px solid #cccccc;
+            width: 2rem!important;
+            font-family: "微软雅黑";
+            background: #468fd2;
+            color: #fff;
+            padding: 5px;
+            color: white!important;
+          }
+          tr td{
+            border:1px solid #cccccc;
+            width: 4rem!important;
+            font-family: "微软雅黑";
+            padding: 5px;
           }
         }
         .whether-ul{
@@ -341,8 +371,13 @@
       margin-left: .2rem;
       margin-right: .2rem;
     }
+    .links{
+      width: .6rem;
+      //margin-left: .2rem;
+      margin-right: .2rem;
+    }
     .send-text{
-      width: 64%;
+      width: 52%;
       height: .8rem;
       padding-left: .2rem;
       margin-top: .4rem;
@@ -418,5 +453,42 @@
         border: 1px solid #EFEFEF;
       }
     }
-  }
+    .jumpLinks{
+        width: 100%;
+        height: 100%;
+        text-align: center;
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        justify-content:flex-start;
+        li{
+            width: 20%;
+            height: 2.7rem;
+            margin-left: .4rem;
+            img{
+                width: 100%;
+                height: 80%;
+                margin:0 auto;
+                margin-left: -4px;
+            }
+            div{
+                font-size:1.6rem;
+                width:1.6rem;
+                height:1.8rem;
+                cursor: pointer;
+                color:rgba(46,0,139,1);
+                background: #ffffff;
+                opacity: 0.7;
+                text-align: center;
+                line-height: 1.8rem;
+                font-weight: bold;
+            }
+            p{
+                text-align: center;
+                color:rgba(56,56,56,1);
+            }
+        }
+
+    }
+}
 }
