--- a/guest（old）/css/show.css
+++ b/guest（old）/css/show.css
@@ -268,7 +268,7 @@ ul {
 	padding-top: 15rem;
 }
 
-.aimi .swiper-container .swiper-slide>div {
+.aimi .case .swiper-container .swiper-slide>div {
 	float: left;
 	margin-top: 1rem;
 	border-radius: 0.8rem;
@@ -286,21 +286,61 @@ ul {
 	font-size: .8rem;
 }
 
-.aimi .swiper-container {
+.aimi .case .swiper-container {
 	padding-left: 1rem;
 	box-sizing: border-box;
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
-.aimi .swiper-container .swiper-slide>div:nth-child(2n-1) {
+.aimi .case .swiper-container .swiper-slide>div:nth-child(2n-1) {
 	clear: left;
 }
 
-.aimi .swiper-container .swiper-slide>div:nth-child(2n) {
+.aimi .case .swiper-container .swiper-slide>div:nth-child(2n) {
 	float: right;
 	padding-left: 0rem;
 	margin-right: 1rem;
 }
+
+.aimi .personcase .swiper-container .swiper-slide ul{
+	width: 100%;
+	height: 8rem;
+	display: flex;
+	justify-content:flex-start;
+	background-color: #f6f6f6;
+}
+.aimi .personcase .swiper-container .swiper-slide ul li{
+	float: left;
+	list-style: none;
+	display: flex;
+	justify-content:center;
+	padding-top: 1rem;
+	background:rgba(255,255,255,1);
+	border-radius:6px;
+	width: 4.5rem;
+	padding-left: .5rem;
+	margin-left: .7rem;
+	flex-direction:column;
+}
+.aimi .personcase .swiper-container .swiper-slide ul li p{
+	display: inline-block;
+	position: relative;
+	top: -.5rem;
+	width: 4rem!important;
+	height: 1.5rem;
+	font-size: .8rem;
+	text-align: center;
+	color: #383838;
+}
+.aimi .personcase .swiper-container .iconpic{
+	height: 5rem;
+	font-size: 4rem;
+	color: #000a8b;
+}
+
+
+
+
 
 .radius>a,
 .radius .option {
@@ -364,11 +404,26 @@ ul {
 	background-position: -2.8rem 0.1rem
 }
 
+.input .person {
+	background: url(../img/add.png) no-repeat;
+	width: 1.4rem;
+	float: left;
+	height: 1.4rem;
+	margin-top: 1.2rem;
+	margin-left: -.5rem;
+	margin-right: .3rem;
+	cursor: pointer;
+	background-size: cover;
+}
+
 .case {
 	background-color: #f6f6f6;
 	display: block;
 }
-
+.personcase {
+	background-color: #f6f6f6;
+	display: block;
+}
 .case .swiper-pagination-bullet {
 	background-color: #6b64f9;
 	opacity: 0.5;
@@ -824,12 +879,13 @@ figure {
 	font-size: .9rem;
 	word-break: break-all;
   	vertical-align: middle;
-	width: 95%;
+	width: 18.8rem;
 	height:auto;
 	text-align: center;
 	position: relative;
 	left: 3rem;
 	top: -.7rem;
+	overflow: auto;
 }
 .tableAnswer table{
 	border:1px solid #cccccc;
