--- a/guest（new）/src/components/Page/chat.less
+++ b/guest（new）/src/components/Page/chat.less
@@ -23,7 +23,7 @@
       height: 0.6rem;
       text-align: center;
       background-color: #eeedff;
-      border-radius: .3rem;
+      border-radius: .25rem;
       font-size: 20px;
       border: 1px solid #d9d7ff;
       color: #454545;
@@ -185,6 +185,10 @@
           line-height: 32px;
           padding: .25rem;
           border-radius: .4rem .4rem .4rem 0rem;
+          overflow: auto;
+          .table-inline{
+            width: 16rem!important; 
+          }
           tr th{
             border:1px solid #cccccc;
             width: 2rem!important;
@@ -199,6 +203,7 @@
             width: 4rem!important;
             font-family: "微软雅黑";
             padding: 5px;
+            text-align: center;
           }
         }
         .whether-ul{
@@ -382,6 +387,23 @@
       padding-left: .2rem;
       margin-top: .4rem;
       margin-bottom: .4rem;
+      margin-left: .2rem;
+    }
+    .send-text-one{
+      width: 62%;
+      height: .8rem;
+      padding-left: .2rem;
+      margin-top: .4rem;
+      margin-bottom: .4rem;
+      margin-left: .2rem;
+    }
+    .send-text-two{
+      width: 72%;
+      height: .8rem;
+      padding-left: .2rem;
+      margin-top: .4rem;
+      margin-bottom: .4rem;
+      margin-left: .2rem;
     }
     .picture-input{
       position: relative;
