--- a/guest（new）/src/components/Page/chat.less
+++ b/guest（new）/src/components/Page/chat.less
@@ -16,6 +16,7 @@
       font-size: 20px;
       margin-top: .35rem;
       margin-left: .2rem;
+      font-family: 微软雅黑;
     }
     .human-answer-button{
       float: right;
@@ -30,6 +31,7 @@
       cursor: pointer;
       margin-top: .2rem;
       margin-right: .2rem;
+      font-family: 微软雅黑;
     }
   }
   .chatting-content {
@@ -366,6 +368,7 @@
   }
   .foot-content{
     width: 640px;
+    // height: 1.5rem;
     //position: fixed;
     position: relative;
     bottom: 0px;
@@ -378,8 +381,8 @@
     }
     .links{
       width: .6rem;
-      //margin-left: .2rem;
-      margin-right: .2rem;
+      margin-left: .2rem;
+      // margin-right: .2rem;
     }
     .send-text{
       width: 52%;
@@ -390,7 +393,7 @@
       margin-left: .2rem;
     }
     .send-text-one{
-      width: 62%;
+      width: 60%;
       height: .8rem;
       padding-left: .2rem;
       margin-top: .4rem;
@@ -457,7 +460,7 @@
       text-align: center;
       display: table; /*重点*/
       position: relative;
-      top: -.2rem;
+      // top: -.2rem;
       li{
         float: left;
         width: 43%;
